--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <html>
 <head>
   <title>Mohamed Traore - Portfolio</title>
+  <meta http-equiv="refresh" content="0; URL='/portfolio/'" />
 </head>
 <body>
-  <h1>Mohamed Traore</h1>
-  <h2>Mohamed Traore</h2>
-  <p>Welcome to my project portfolio</p>
-  <p>Currently under construction ... More updates coming soon.</p>
-  <h3><a href="https://github.com/mo-traor3-ai" target="_blank">GitHub</a></h3>
+  <p>If you are not redirected automatically, follow this <a href="/portfolio/">link to the portfolio</a>.</p>
 </body>
 </html>
